# ConceptMapper

./: .env.example  .gitignore  .mcp.json  APP_STORE_LAUNCH.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SPEC.md  TODO.md  TRACEABILITY.md  collins_network_taxonomy.md
.claude/: settings.json
.claude/commands/: build.md  deploy.md  review.md  test-all.md
.github/workflows/: apps.yml  ci.yml
Maps/: complexity-sciences.cm  notes.cm  organisational-learning.cm  tasks-and-notes.cm
ci_scripts/: ci_pre_xcodebuild.sh
docs/: architecture.md  onboarding.md
examples/: how-we-learn-sample.json  how-we-learn-sample.md  organisational-learning.cm  organisational-learning.cmt  task-management.cm  task-management.cmt
ios/: project.yml
macos/: ExportOptions-DeveloperID.plist  ExportOptions.plist  project.yml
mcp-server/: Package.swift
scripts/: build-app.sh  gen-support-site.mjs  release-macos.sh
specs/: multiplatform-plan.md  principles-architecture.md  principles-development.md  principles-security.md  taxonomy-schema.md  ui-features.md
src/: cli.rs  lib.rs  wasm.rs
tasks/: todo.md
templates/: complexity-sciences.cmt  notes.cmt  task-management.cmt  tasks-and-notes.cmt
test-materials/: learning.md
tests/: edge_parser_tests.rs  error_paths_tests.rs  golden_tests.rs  integration_tests.rs  lexer_tests.rs  node_parser_tests.rs  sections_tests.rs  serialization_tests.rs  stream_parsing_tests.rs
web/: .gitignore  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.test.json  vite.config.ts
(+254 files in other folders)
